Insert year to the title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </style>
 </head>
 <body>
-<h1>Welcome to CaioLand!</h1>
+<h1>Welcome to CaioLand 2024!</h1>
 <img src="caioland.jpeg" width="50%"><br>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
