Convert photo to webp

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <h1>Welcome to CaioLand 2024!</h1>
-<img src="caioland.jpeg" width="50%"><br>
+<img src="caioland.webp" width="50%"><br>
 <p>If you see this page, the nginx web server is successfully installed and
 working. Further configuration is required.</p>
 
